Bug 111865 - Progress bar can't be set to a certain percentage (gtk3)
Summary: Progress bar can't be set to a certain percentage (gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, regression
Depends on: 111864
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2017-08-16 17:58 UTC by Xisco Faulí
Modified: 2017-09-06 20:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (199.00 KB, image/png)
2017-08-29 09:06 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-08-16 17:58:09 UTC
Steps:
1. Open attachment 135587 [details]
2. Click on start button
3. Click on 'set value to 25' -> progress bar should be filled 25%

Observed behaviour: Progress bar isn't set to 25%

Reproduced in

Version: 6.0.0.0.alpha0+
Build ID: a19dc104ec008f0bb44676d63d4764c6d7442a0d
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2017-08-16 18:03:10 UTC
In master it can't be reproducible due to bug 111864.

Regression introduced in range:
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=a6f876d45bd4e41a7143594a6cb11b6893a0f620..0ab6332f97ec8b12d96f43834febea21e0b39f6a
 03c33a2521421415c4fcbbe1491dc92a1943269b looks like a candidate...
Comment 2 Caolán McNamara 2017-08-29 09:05:52 UTC
The progress bar looks a little broken in that setting to 25% does nothing, then setting to 50% then draws at 25%. With https://gerrit.libreoffice.org/#/c/41675/ in place it jumps straight to the requested % which looks better to me.
Comment 3 Caolán McNamara 2017-08-29 09:06:28 UTC
Created attachment 135844 [details]
screenshot

screenshot after my changes
Comment 4 Commit Notification 2017-08-29 11:41:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4b44a42b6a54ddf57635fcdb9cf9c18c5e631ff1

Resolves: tdf#111865 ensure draw after SetProgressValue uses new value

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2017-08-31 22:42:43 UTC
I tried in

Version: 6.0.0.0.alpha0+
Build ID: 04d70c0999c716f5465631eca50945915ec607c4
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but I'm blocked by bug 111864
Comment 6 Xisco Faulí 2017-09-06 20:39:40 UTC
Verified in

Version: 6.0.0.0.alpha0+
Build ID: 383aab7ed63bf30931c1cf89138707d2228b5dce
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group