Resolves: tdf#111865 ensure draw after SetProgressValue uses new value

and always erase the background so we can go backwards as well as forwards

Change-Id: Ibdf215320d0eeb3392cd21d3e1fd5c0535e6cd31